Criando endpoint para listar filmes
