# src/api/services/movies.service.ts
@@ -1,0 +1,10 @@
+export default class Movies {
+    public getMovies() {
+        return [
+            { id: 1, title: "Inception", year: 2010, genre: "Sci-Fi" },
+            { id: 2, title: "The Matrix", year: 1999, genre: "Action" }
+        ];
+    }
+}
+
+
